--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "movie:build"
+            "browserTarget": "movie:build",
+            "port": 7777
           },
           "configurations": {
             "production": {
